gcc/testsuite/g++.dg/cpp0x/constexpr-initlist7.C
// PR c++/60186
// { dg-require-effective-target c++11 }

template<typename> void foo(int i)
{
  constexpr int a[] = { i };	// { dg-error "" }
}
